[package]
name = "wren-rs"
version = "0.1.0"
edition = "2021"
authors = ["chy <343938938@qq.com>"]
description = "Bindings to the Wren scripting language API"
# readme = "README.md"
keywords = ["wren", "bindings", "wrapper"]
license = "MIT"
homepage = "https://github.com/chenhuaiyuan/wren-rs"
repository = "https://github.com/chenhuaiyuan/wren-rs"
# documentation = "https://docs.rs/wren"

[dependencies]
libc = "0.2"
wren-sys = {path = "./wren-sys"}

[dev-dependencies]
lazy_static = "1.4"
